Fix double border at bottom of suppressed plugins table

--- a/assets/src/settings-page/style.css
+++ b/assets/src/settings-page/style.css
@@ -173,8 +173,8 @@
 	border-color: #d54e21;
 }
 
-#suppressed-plugins-table tbody tr > th,
-#suppressed-plugins-table tbody tr > td {
+#suppressed-plugins-table tbody tr:not(:last-child) > th,
+#suppressed-plugins-table tbody tr:not(:last-child) > td {
 	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
